# MPC_OCS2

./: README.md  techniquePoint.md  voxblox.tar.xz
FIESTA/: CMakeLists.txt
FIESTA/include/: ESDFMap.h  Fiesta.h  parameters.h  threadSafeQueue.h
FIESTA/launch/: cow_and_lady.launch
FIESTA/src/: ESDFMap.cpp  parameters.cpp  test_multithread.cpp
Universal_Robots_ROS_Driver/controller_stopper/: CMakeLists.txt
Universal_Robots_ROS_Driver/ur_calibration/: CMakeLists.txt
Universal_Robots_ROS_Driver/ur_dashboard_msgs/: CMakeLists.txt
Universal_Robots_ROS_Driver/ur_robot_driver/: CMakeLists.txt
catkin_simple/: README.md
cluttered_env_generator/include/: ClutteredEnvGenerator.hpp
cluttered_env_generator/launch/: map.launch
cluttered_env_generator/src/: ClutteredEnvGenerator.cpp  ClutteredEnvGeneratorNode.cpp
eigen_catkin/: CMakeLists.txt
eigen_checks/: CMakeLists.txt
frontend_ompl/: CMakeLists.txt  package.xml
frontend_ompl/include/: DubinsWholebodyFrontEnd.hpp  FrontEndOMPLRRTStar.hpp  JointSpaceRRT.hpp
frontend_ompl/src/: FrontEndOMPLRRTStar.cpp  JointSpaceRRT.cpp  RRTstar.txt  demoFrontEnd.cpp  plotDubins.py  testDubins copy.cpp  testDubins.cpp  testFrontEnd.cpp  testSST.cpp  visualizeFrontEnd.py
gflags_catkin/: CMakeLists.txt
glog_catkin/: CMakeLists.txt
graceful_mpc/: CMakeLists.txt  change.md  package.xml
graceful_mpc/config/: demo.rviz  kinematic_simulation_parameters.yaml  task.info  tradr_realsense_l515.yaml
graceful_mpc/example/: GracefulMpcInterface.cpp  KinematicSimulation.cpp
graceful_mpc/include/example/: GracefulMpcInterface.h  KinematicSimulation.h
graceful_mpc/include/graceful_mpc/: Definitions.h  ExplicitTemplateInstantiations.h  ModelSettings.h  OperatingPoint.h  StateConversion.h  SystemDynamics.h
graceful_mpc/include/graceful_mpc/costs/: CurveCost.h  FiestaCost.h  FrontOrientationCost.h  InterpolatePoseTrajectory.h  ManipulabilityCost.h  PointsOnRobot.h  QuadraticEndeffectorTrackingCost.h  StateCost.h
graceful_mpc/include/graceful_mpc/kinematics/: KinematicsInterface.hpp
graceful_mpc/include/graceful_mpc/kinematics/ur5/: UR5Kinematics.hpp
graceful_mpc/launch/: test.launch
graceful_mpc/msg/: PoseVelocityStamped.msg  PoseVelocityTrajectory.msg
graceful_mpc/scripts/: tmp.py
graceful_mpc/src/: ExplicitTemplateInstantiations.cpp  OperatingPoint.cpp  SystemDynamics.cpp  testSystemdynamics.cpp
graceful_mpc/src/costs/: CurveCost.cpp  FiestaCost.cpp  FrontOrientationCost.cpp  ManipulabilityCost.cpp  PointsOnRobot.cpp  QuadraticEndeffectorTrackingCost.cpp  StateCost.cpp
graceful_mpc/src/example/: GracefulMpcInterface.cpp  KinematicSimulation.cpp  interactive_marker.py  kinematic_simulation_node.cpp
graceful_mpc/src/kinematics/: KinematicsInterface.cpp
graceful_mpc/src/kinematics/ur5/: UR5Kinematics.cpp
image_undistort/: CMakeLists.txt
lxfr_description/: CMakeLists.txt  package.xml
lxfr_description/config/: diffdrive_controller.yaml  joint_state_controller.yaml
lxfr_description/launch/: lxfr_debug_urdf.launch  upload_lxfr_urdf.launch
lxfr_description/meshes/: wheel_link.STL
lxfr_description/rviz/: lxfr_description.rviz
lxfr_description/urdf/: lxfr.urdf.xacro
lxfr_description/urdf/include/: common.gazebo.xacro  imu.gazebo.urdf.xacro  lxfr.gazebo.xacro  lxfr_v1.urdf copy 2.xacro  lxfr_v1.urdf copy.xacro  lxfr_v1.urdf.xacro  sick_s300.urdf.xacro
minkindr/minkindr/: CMakeLists.txt
minkindr/minkindr_python/: CMakeLists.txt
minkindr_ros/minkindr_conversions/: CMakeLists.txt
mue_description/led_link/: CMakeLists.txt  package.xml
mue_description/led_link/launch/: display.launch  gazebo.launch
mue_description/led_link/urdf/: led_link.csv  led_link.urdf
mue_description/urdf/: lxfr_v1.urdf.xacro  mue.urdf.xacro  mue_raw.urdf  tmp.urdf  ur5_raw.urdf  ur5e.dtdsl  ur5e.kindsl  ur5e.urdf.xacro  ur5e_raw.urdf  ur5e_raw.xacro
mue_description/urdf/include/: basler_aca1440_220uc.urdf.xacro
mue_description/urdf/mue/include/: EV_charger_end.urdf.xacro  EV_charger_end_basler.urdf.xacro  EV_charger_end_cams.urdf.xacro
mue_description/urdf/mue/objects/: EV_car_sim.urdf
object_pointcloud_filter/: CMakeLists.txt  package.xml
object_pointcloud_filter/include/: CupFilterNodelet.hpp
object_pointcloud_filter/src/: CupFilterNodelet.cpp
ocs2/ocs2/: CMakeLists.txt
ocs2/ocs2_ddp/: CMakeLists.txt
ocs2/ocs2_robotic_examples/ocs2_robotic_examples/: CMakeLists.txt
perceptive_mpc/: CMakeLists.txt  package.xml  perceptive_mpc_https.rosinstall
perceptive_mpc/config/: admittance_task.info  demo.rviz  kinematic_simulation_parameters.yaml  task.info  voxblox.yaml
perceptive_mpc/example/: KinematicSimulation.cpp  PerceptiveMpcInterface.cpp  interactive_marker.py
perceptive_mpc/include/example/: KinematicSimulation.h  PerceptiveMpcInterface.h
perceptive_mpc/include/perceptive_mpc/: EsdfCachingServer.hpp
perceptive_mpc/launch/: collision_avoidance_demo.launch  debug.launch  demo.launch  load_map.sh  test.launch
perceptive_mpc/scripts/: load_map.sh
perceptive_mpc/src/: EsdfCachingServer.cpp
perceptive_mpc/src/costs/: FiestaCost.cpp  FrontOrientationCost.cpp  ManipulabilityCost.cpp  VoxbloxCost.cpp
perceptive_mpc/src/kinematics/: KinematicsInterface.cpp
realsense-ros/realsense2_camera/: CMakeLists.txt
realsense-ros/realsense2_camera/launch/: demo_pointcloud.launch
realsense-ros/realsense2_camera/src/: base_realsense_node.cpp
realsense-ros/realsense2_description/: CMakeLists.txt
robot_body_filter/examples/: body_filter_node.launch  tradr_realsense_l515.yaml
urdf2robcogen/: CMakeLists.txt
voxblox/voxblox/: CMakeLists.txt
voxblox/voxblox_msgs/: CMakeLists.txt
voxblox/voxblox_ros/: CMakeLists.txt
voxblox/voxblox_ros/cfg/: rviz.rviz
voxblox/voxblox_ros/launch/: basement_dataset.launch  cow_and_lady_dataset.launch  euroc_dataset.launch
voxblox/voxblox_ros/src/: esdf_server.cc  tsdf_server.cc
voxblox/voxblox_rviz_plugin/: CMakeLists.txt
wholebody_control/: CMakeLists.txt  package.xml
wholebody_control/script/: fakePublisher.py  mue_receive_and_control.py
(+58 files in other folders)
