<?xml version="1.0"?>
<package>
  <name>frontend_ompl</name>
  <version>1.0.0</version>
  <description>Interface</description>

  <author email="jcarius@ethz.ch">Jan Carius</author>
  <author email="rgrandia@ethz.ch">Ruben Grandia</author>
  <author email="depardo@ethz.ch">Diego Pardo</author>

  <maintainer email="jcarius@ethz.ch">Jan Carius</maintainer>
  <maintainer email="rgrandia@ethz.ch">Ruben Grandia</maintainer>

  <license>BSD3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>roslib</build_depend>
  <build_depend>voxblox_ros</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>roslib</run_depend>
  <run_depend>voxblox_ros</run_depend>
  <!-- The export tag contains other, unspecified, tags -->
  <export>

  </export>
</package>
