<?xml version="1.0"?>
<package format="2">
  <name>graceful_mpc</name>
  <version>0.0.0</version>
  <description>The graceful_mpc package</description>
  <maintainer email="auyuqiangyang@gmail.com">Yuqiang Yang </maintainer>
  <license>BSD-3-Clause</license>
  <author email="auyuqiangyang@gmail.com">Yuqiang Yang</author>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roslib</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>message_generation</depend>
  <depend>tf</depend>
  <depend>ocs2_comm_interfaces</depend>
  <depend>ocs2_core</depend>
  <depend>ocs2_robotic_tools</depend>
  <depend>ocs2_ddp</depend>
  <depend>kindr</depend>
  <depend>kindr_ros</depend>
  <depend>realsense2_camera</depend>

  <!-- <depend>voxblox</depend> -->
  <!-- <depend>voxblox_ros</depend> -->
  <depend>mue_description</depend>
  <depend>lxfr_description</depend>
  <depend>wholebody_control</depend>
  <depend>frontend_ompl</depend>
  <depend>realsense_camera</depend>  
  <depend>realsense_desciption</depend>
  <depend>fiesta</depend>
  <exec_depend>message_runtime</exec_depend>
  <export>
  </export>
</package>
