<?xml version="1.0"?>
<package>
  <name>object_pointcloud_filter</name>
  <version>1.0.0</version>
  <description>Interface</description>

  <author email="yuqiang6149@163.com">Yang Yuqiang</author>

  <maintainer email="yuqiang6149@163.com">Yang Yuqiang</maintainer>

  <license>BSD3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>roslib</build_depend>
  <build_depend>voxblox_ros</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>roslib</run_depend>
  <run_depend>voxblox_ros</run_depend>
  <!-- The export tag contains other, unspecified, tags -->
  <export>

  </export>
</package>
